# yt-dlp-ui

./: README.md  app.py  pyproject.toml  requirements.txt  run.py  run.sh  run.spec
.github/workflows/: zip.yaml
